Fixed addBaseUrls not checking for URL validity